[package]
name = "stylus-hello-world"
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", rev = "2df1878bcc5521e5c88be5bd419acf91c6432608" }
alloy-primitives = { version = "=0.7.6", default-features = false}
mini-alloc = "0.4.2"
stylus-sdk = { version = "=0.5.0"}

[features]
std = []

[lib]
crate-type = ["lib", "cdylib"]
